# substitute

./: .gitignore  CMakeLists.txt  COPYING.txt  ChangeLog.txt  Compile  Constants.h  Driver.cc  Driver.h  Generate  INSTALL.txt  Imakefile  License.txt  Makefile  README.md  Usage.cc  Usage.h  VERSION.h  main.cc  mingw.mak  std_macro.h  structures.h  util-file-cc.patch
objects/: Imakefile  Makefile  actionset.cc  actionset.h  intset.cc  intset.h  intsets.cc  nameset.cc  search_match.cc  search_match.h  search_range.cc  search_range.h  search_rangeset.cc  search_rangeset.h
releng/: Makefile
scripts/: mkBuild
src/: .clang-format  Action.cc  Actionset.cc  Build.h  CMakeLists.txt  Config.h  Constants.h  Driver.cc  Driver.h  File.cc  Generate  Imakefile  License.txt  Makefile  S.G  Search_match.cc  Search_match.h  Usage.cc  Usage.h  VERSION.h  Version.cc  main.cc  search_range.patch  std_macro.h  structures.h  util-file-cc.patch
src/objects/: CMakeLists.txt  action.cc  action.h  actionset.cc  actionset.h  intset.cc  intset.h  intsets.cc  intsets.h  nameset.cc  nameset.h  objset.cc  objset.h  search_match.cc  search_match.h  search_range.cc  search_range.h  search_rangeset.cc  search_rangeset.h
src/scripts/: mkBuild
src/src/: Action.cc  Action.h  Actionset.cc  Actionset.h  CMakeLists.txt  Command.cc  Command.h  File.cc  File.h  Search_match.cc  Search_match.h  Version.cc  Version.h
src/util/: CMakeLists.txt  arithmetic.cc  arithmetic.h  command.cc  command.h  error.cc  error.h  file.cc  file.h  handleSet.h  search.h  text.cc  text.h  visit.h  writeSet.h
(+6 files in other folders)
